force-app/main/default/objects/pi__Pardot_Scoring_Category__c/pi__Pardot_Scoring_Category__c.object-meta.xml
<CustomObject>
    <description>Used for Pardot Scoring Categories. Stores the name of the Scoring Categories synced over from Pardot.

Scoring Categories are used for multi-product engagement scoring in Pardot and are available to customers using Pardot Pro Edition and Pardot Ultimate Edition. Please visit this page for more information on this feature and how to set up Salesforce to view these scores: http://help.pardot.com/customer/portal/articles/2396977-scoring-categories-overview</description>
    <label>Pardot Scoring Category</label>
    <nameField>
        <displayFormat>SC-{0000}</displayFormat>
        <label>Category Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pardot Scoring Categories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>