force-app/main/default/objects/pi__Pardot_Scoring_Category__c/fields/pi__Category_Name__c.field-meta.xml
<CustomField>
    <fullName>pi__Category_Name__c</fullName>
    <label>Category Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>