force-app/main/default/objects/pi__Pardot_Scoring_Category__c/fields/pi__Category_Pardot_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>pi__Category_Pardot_Record_Id__c</fullName>
    <label>Category Pardot Record Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>