force-app/main/default/objects/pi__Pardot_Scoring_Category__c/fields/pi__Pardot_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>pi__Pardot_Account_Id__c</fullName>
    <label>Pardot Account Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>