force-app/main/default/objects/pi__Pardot_Scoring_Category__c/listViews/pi__All.listView-meta.xml
<ListView>
    <fullName>pi__All</fullName>
    <columns>pi__Category_Name__c</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>